# chaos-core

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  Ardycia aesthetic bible.txt  Bugfixing.txt  CC GDD.md  CC bug fixing.txt  CC full index.txt  CLAUDE.MD  DEV_NOTES_RECRUITMENT_PWR.md  DUNGEON_FLOOR_FIXES.md  FIELD_SYSTEM_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.txt  RUN_LOOP_AUDIT.md  basic CORE builds.txt  bug-fixes.patch  chaos-core-content-index.v1.json  chaos-core.code-workspace  clever-hertz.code-workspace  compile_errors.txt  compile_errors2.txt  headings.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  ts_errors.txt  ts_errors_2.txt  ts_errors_3.txt  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.tmp/: all-nodes-annex-unlock-check.js  allnodes-controller-finish-check.js  battle-confirm-check.js  battle-placement-window-check.js  battle-sandbox-check.css  battle-sandbox-check.js  confirm-dialog-final-check.js  controller-battle-check.js  controller-field-check.js  controller-mainmenu-check.js  controller-opmap-check.js  controller-settings-check.css  controller-settings-check.js  controller-support-finish-check.js  controller-support-modal-check.js  controller-theater-check.js  defense-confirm-check.js  dualsense-battle-check.js  dualsense-field-interact-check.css  dualsense-field-interact-check.js  (+32 more)
.tmp-edge-debug/: Breadcrumbs  Local State
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1111 files in other folders)
